--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="project-info">
             <h1>Mobile Application Development</h1>
             <h2>Calculator</h2>
-            <p>Developed in Android Studio.</p>
+            <p>Developed a calculator utilizing Android Studio and  SQLite.</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.jpeg" alt="img">
@@ -63,7 +63,7 @@
           <div class="project-info">
             <h1>Mobile Application Development</h1>
             <h2>Meeting Manager</h2>
-            <p>App created to add and manage meetings.</p>
+            <p>Developed a meeting manager utilizing Android Studio and  SQLite.</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.jpeg" alt="img">
@@ -73,7 +73,7 @@
           <div class="project-info">
             <h1>Artificial Intelligence</h1>
             <h2>Chess</h2>
-            <p>Chess Game created in Java</p>
+            <p>Developed a Chess program with a human-computer interface (Minimax with alpha-beta pruning) using Python.</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.jpeg" alt="img">
@@ -82,8 +82,8 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Game Development</h1>
-            <h2>Sudoku</h2>
-            <p>Game Developed in Python.</p>
+            <h2>Connect Four</h2>
+            <p>Developed a Connect Four game with a human-computer interface (Minimax) using Python.</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.jpeg" alt="img">
@@ -92,8 +92,8 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Data Structures and Algorithms</h1>
-            <h2>Balancing BSTs</h2>
-            <p>Program to balance BSTs</p>
+            <h2>BSTs</h2>
+            <p>Developed programs in Java to balance binary search trees and to compare depth and breadth first tree traversals.</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.jpeg" alt="img">
