--- a/index.html
+++ b/index.html
@@ -52,17 +52,21 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Mobile Application Development</h1>
-            <h2>Calculator</h2>
-            <p>Developed a calculator utilizing Android Studio and  SQLite.</p>
+            <a href="https://github.com/karina-b?tab=repositories">
+            <u><h2>Calculator</h2></u>
+            </a>
+            <p>Developed a calculator utilizing Android Studio and SQLite.</p>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.jpeg" alt="img">
+              <img src="./img/calculator1.png"  alt="calculator1">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
             <h1>Mobile Application Development</h1>
-            <h2>Meeting Manager</h2>
+            <a href="https://github.com/karina-b?tab=repositories">
+            <u><h2>Meeting Manager</h2></u>
+            </a>
             <p>Developed a meeting manager utilizing Android Studio and  SQLite.</p>
           </div>
           <div class="project-img">
@@ -72,7 +76,9 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Artificial Intelligence</h1>
-            <h2>Chess</h2>
+            <a href="https://github.com/karina-b?tab=repositories">
+            <u><h2>Chess</h2></u>
+            </a>
             <p>Developed a Chess program with a human-computer interface (Minimax with alpha-beta pruning) using Python.</p>
           </div>
           <div class="project-img">
@@ -82,7 +88,9 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Game Development</h1>
-            <h2>Connect Four</h2>
+            <a href="https://github.com/karina-b?tab=repositories">
+            <u><h2>Connect Four</h2></u>
+            </a>
             <p>Developed a Connect Four game with a human-computer interface (Minimax) using Python.</p>
           </div>
           <div class="project-img">
@@ -92,7 +100,9 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Data Structures and Algorithms</h1>
-            <h2>BSTs</h2>
+            <a href="https://github.com/karina-b?tab=repositories">
+            <u><h2>BSTs</h2></u>
+            </a>
             <p>Developed programs in Java to balance binary search trees and to compare depth and breadth first tree traversals.</p>
           </div>
           <div class="project-img">
