--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p>Developed a calculator utilizing Android Studio and SQLite.</p>
           </div>
           <div class="project-img">
-              <img src="./img/calculator1.png"  alt="calculator1">
+              <img src="./img/calculator1.PNG"  alt="calculator1">
           </div>
         </div>
         <div class="project-item">
