--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
             <p>Developed a calculator utilizing Android Studio and SQLite.</p>
           </div>
           <div class="project-img">
+            <a href="https://github.com/karina-b?tab=repositories">
               <img src="./img/calculator1.PNG"  alt="calculator1">
+            </a>  
           </div>
         </div>
         <div class="project-item">
