--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <div class="projects container">
       <div class="projects-header">
         <h1 class="section-title">Recent <span>Projects</span></h1>
+        <p>Contact me directly if you would like to see the code for my projects!</p>
       </div>
       <div class="all-projects">
         <div class="project-item">
