--- a/index.html
+++ b/index.html
@@ -1,181 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="favicon.ico?" type="image/x-icon"/>
-  <link rel="stylesheet" href="style.css">
-  <title>Karina Bissessar</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico?" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css">
+    <title>Karina Bissessar</title>
 </head>
+
 <body>
-  <!-- Header -->
-  <section id="header">
-    <div class="header container">
-      <div class="nav-bar">
-        <div class="brand">
-          <a href="#hero"><h1>Karina Bissessar</h1></a>
+    <!-- Header -->
+    <section id="header">
+        <div class="header container">
+            <div class="nav-bar">
+                <div class="brand">
+                    <a href="#hero">
+                        <h1>Karina Bissessar</h1>
+                    </a>
+                </div>
+                <div class="nav-list">
+                    <div class="hamburger">
+                        <div class="bar"></div>
+                    </div>
+                    <ul>
+                        <li><a href="#hero" data-after="Home">Home</a></li>
+                        <li><a href="#projects" data-after="Projects">Projects</a></li>
+                        <li><a href="#about" data-after="About">About</a></li>
+                        <li><a href="#contact" data-after="Contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="nav-list">
-          <div class="hamburger"><div class="bar"></div></div>
-          <ul>
-            <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#projects" data-after="Projects">Projects</a></li>
-            <li><a href="#about" data-after="About">About</a></li>
-            <li><a href="#contact" data-after="Contact">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Header -->
+    </section>
+    <!-- End Header -->
 
 
-  <!-- Hero Section  -->
-  <section id="hero">
-    <div class="hero container">
-      <div>
-        <h1>Hi! <span></span></h1>
-        <h1>My Name is <span></span></h1>
-        <h1>Karina <span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
-      </div>
-    </div>
-  </section>
-  <!-- End Hero Section  -->
+    <!-- Hero Section  -->
+    <section id="hero">
+        <div class="hero container">
+            <div>
+                <h1>Hi! <span></span></h1>
+                <h1>My Name is <span></span></h1>
+                <h1>Karina <span></span></h1>
+                <a href="#projects" type="button" class="cta">Portfolio</a>
+            </div>
+        </div>
+    </section>
+    <!-- End Hero Section  -->
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <div class="projects container">
-      <div class="projects-header">
-        <h1 class="section-title">Recent <span>Projects</span></h1>
-        <p>Contact me directly if you would like to see the code for my projects!</p>
-      </div>
-      <div class="all-projects">
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Mobile Application Development</h1>
-            <a href="https://github.com/karina-b?tab=repositories">
-            <u><h2>Calculator</h2></u>
-            </a>
-            <p>Developed a calculator utilizing Android Studio and SQLite.</p>
-          </div>
-          <div class="project-img">
-            <a href="https://github.com/karina-b?tab=repositories">
-              <img src="./img/calculator1.PNG"  alt="calculator1">
-            </a>  
-          </div>
+    <!-- Projects Section -->
+    <section id="projects">
+        <div class="projects container">
+            <div class="projects-header">
+                <h1 class="section-title">Recent <span>Projects</span></h1>
+                <p>Click each project to read more!</p>
+            </div>
+            <div class="all-projects">
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Mobile Application Development</h1>
+                        <a href="https://github.com/karina-b/Calculator/blob/main/Calculator.pdf">
+                            <u><h2>Calculator</h2></u>
+                        </a>
+                        <p>Developed a calculator utilizing Android Studio and SQLite.</p>
+                    </div>
+                    <div class="project-img">
+                        <a href="https://github.com/karina-b/Calculator/blob/main/Calculator.pdf">
+                            <img src="./img/calc.png" alt="calculator1">
+                        </a>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Mobile Application Development</h1>
+                        <a href="https://github.com/karina-b?tab=repositories">
+                            <u><h2>Meeting Manager</h2></u>
+                        </a>
+                        <p>Developed a meeting manager utilizing Android Studio and SQLite.</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/calendarimg.jpg" alt="img">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Artificial Intelligence</h1>
+                        <a href="https://github.com/karina-b?tab=repositories">
+                            <u><h2>Chess</h2></u>
+                        </a>
+                        <p>Developed a Chess program with a human-computer interface (Minimax with alpha-beta pruning) using Python.</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/chess.PNG" alt="img">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Computer Graphics</h1>
+                        <a href="https://github.com/karina-b?tab=repositories">
+                            <u><h2>Triangulation</h2></u>
+                        </a>
+                        <p>Developed the trisection/cleanup triangulation algorithm with colour-codes triangles using C++ and OpenGL.</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="./img/tri.png" alt="img">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Mobile Application Development</h1>
-            <a href="https://github.com/karina-b?tab=repositories">
-            <u><h2>Meeting Manager</h2></u>
-            </a>
-            <p>Developed a meeting manager utilizing Android Studio and  SQLite.</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.jpeg" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Artificial Intelligence</h1>
-            <a href="https://github.com/karina-b?tab=repositories">
-            <u><h2>Chess</h2></u>
-            </a>
-            <p>Developed a Chess program with a human-computer interface (Minimax with alpha-beta pruning) using Python.</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.jpeg" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Game Development</h1>
-            <a href="https://github.com/karina-b?tab=repositories">
-            <u><h2>Connect Four</h2></u>
-            </a>
-            <p>Developed a Connect Four game with a human-computer interface (Minimax) using Python.</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.jpeg" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Data Structures and Algorithms</h1>
-            <a href="https://github.com/karina-b?tab=repositories">
-            <u><h2>BSTs</h2></u>
-            </a>
-            <p>Developed programs in Java to balance binary search trees and to compare depth and breadth first tree traversals.</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.jpeg" alt="img">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Projects Section -->
+    </section>
+    <!-- End Projects Section -->
 
-  <!-- About Section -->
-  <section id="about">
-    <div class="about container">
-      <div class="col-left">
-        <div class="about-img">
-          <img src="./img/img-2.jpg" alt="img">
+    <!-- About Section -->
+    <section id="about">
+        <div class="about container">
+            <div class="col-left">
+                <div class="about-img">
+                    <img src="./img/img-2.jpg" alt="img">
+                </div>
+            </div>
+            <div class="col-right">
+                <h1 class="section-title">About <span>me</span></h1>
+                <h2>Computer Scientist</h2>
+                <p>I am a fourth year Computer Science student with an interest in web and mobile app development.</p>
+                <p>In my free time, I love cooking and playing Pokemon Go!</p>
+                <!--<a href="#" class="cta">My Resume</a> -->
+            </div>
         </div>
-      </div>
-      <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
-        <h2>Computer Scientist</h2>
-        <p>I am a fourth year Computer Science student with an interest in web and mobile app development.</p>
-        <p>In my free time, I love cooking and playing Pokemon Go!</p>
-        <!--<a href="#" class="cta">My Resume</a> -->
-      </div>
-    </div>
-  </section>
-  <!-- End About Section -->
+    </section>
+    <!-- End About Section -->
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="contact container">
-      <div><h1 class="section-title">Contact <span>info</span></h1></div>
-      <div class="contact-items">
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png"/></div>
-          <div class="contact-info">
-            <h1>Linkedin</h1>
-            <h2>www.linkedin.com/in/karinabissessar</h2>
-            <h3>Connect with me!</h3>
-          </div>
+    <!-- Contact Section -->
+    <section id="contact">
+        <div class="contact container">
+            <div>
+                <h1 class="section-title">Contact <span>info</span></h1>
+            </div>
+            <div class="contact-items">
+                <div class="contact-item">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
+                    <div class="contact-info">
+                        <h1>Linkedin</h1>
+                        <h2>www.linkedin.com/in/karinabissessar</h2>
+                        <h3>Connect with me!</h3>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+                    <div class="contact-info">
+                        <h1>Email</h1>
+                        <h2>karinabissessar@gmail.com</h2>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
+                    <div class="contact-info">
+                        <h1>Github</h1>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png"/></div>
-          <div class="contact-info">
-            <h1>Email</h1>
-            <h2>karinabissessar@gmail.com</h2>
-          </div>
-        </div>
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
-          <div class="contact-info">
-            <h1>Github</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Contact Section -->
+    </section>
+    <!-- End Contact Section -->
 
-  <!-- Footer -->
-  <section id="footer">
-    <div class="footer container">
-      </div>
-    </div>
-  </section>
-  <!-- End Footer -->
-  <script src="./app.js"></script>
+    <!-- Footer -->
+    <section id="footer">
+        <div class="footer container">
+        </div>
+        </div>
+    </section>
+    <!-- End Footer -->
+    <script src="./app.js"></script>
 </body>
-</html>
 
+</html>
