--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <p>Developed the trisection/cleanup triangulation algorithm with colour-codes triangles using C++ and OpenGL.</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/tri.png" alt="img">
+                        <img src="./img/tri.PNG" alt="img">
                     </div>
                 </div>
             </div>
