--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Mobile Application Development</h1>
-                        <a href="https://github.com/karina-b?tab=repositories">
+                        <a href="https://github.com/karina-b/Calendar-and-Meeting-Manager/blob/main/Calendar_and_Meeting_Manager.pdf">
                             <u><h2>Meeting Manager</h2></u>
                         </a>
                         <p>Developed a meeting manager utilizing Android Studio and SQLite.</p>
