--- a/index.html
+++ b/index.html
@@ -53,58 +53,130 @@
     <section id="projects">
         <div class="projects container">
             <div class="projects-header">
-                <h1 class="section-title">Recent <span>Projects</span></h1>
+                <h1 class="section-title">Projects</h1>
                 <p>Click each project to read more!</p>
             </div>
             <div class="all-projects">
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Mobile Application Development</h1>
                         <a href="https://github.com/karina-b/Calculator/blob/main/Calculator.pdf">
-                            <u><h2>Calculator</h2></u>
+                            <div class="tooltip">
+                                <h2>Calculator App</h2>
+                                <span class="tooltiptext">Click here to read more on GitHub</span>
+                            </div>
+                            <p> Developed a dual-mode calculator utilizing Android Studio and SQLite in order to
+                                allow users
+                                to perform mathematical operations
+                                in a basic and a formula-entry mode.
+                            </p>
+                            </u>
                         </a>
-                        <p>Developed a calculator utilizing Android Studio and SQLite.</p>
+
                     </div>
                     <div class="project-img">
-                        <a href="https://github.com/karina-b/Calculator/blob/main/Calculator.pdf">
-                            <img src="./img/calc.png" alt="calculator1">
-                        </a>
+                        <video width="780" height="400" controls>
+                            <source src="./videos/calculator_demo.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Mobile Application Development</h1>
-                        <a href="https://github.com/karina-b/Calendar-and-Meeting-Manager/blob/main/Calendar_and_Meeting_Manager.pdf">
-                            <u><h2>Meeting Manager</h2></u>
+                        <a
+                            href="https://github.com/karina-b/Calendar-and-Meeting-Manager/blob/main/Calendar_and_Meeting_Manager.pdf">
+                            <div class="tooltip">
+                                <h2>Meeting Manager App</h2>
+                                <span class="tooltiptext">Click here to read more on GitHub</span>
+                            </div>
+                            <p>Developed a meeting management application utilizing Android Studio and SQLite,
+                                to organize and track the dates, times and locations of appointments.
+                            </p>
                         </a>
-                        <p>Developed a meeting manager utilizing Android Studio and SQLite.</p>
+
                     </div>
                     <div class="project-img">
-                        <img src="./img/calendarimg.jpg" alt="img">
+                        <video width="780" height="400" controls>
+                            <source src="./videos/meeting_demo.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Artificial Intelligence</h1>
                         <a href="https://github.com/karina-b?tab=repositories">
-                            <u><h2>Chess</h2></u>
+                            <div class="tooltip">
+                                <h2>2D Hull</h2>
+                                <span class="tooltiptext">Click here to read more on GitHub</span>
+                            </div>
+
                         </a>
-                        <p>Developed a Chess program with a human-computer interface (Minimax with alpha-beta pruning) using Python.</p>
+                        <p>Developed a program in C++ using OpenGL/Glut to implement the Quick Hull algorithm on
+                            vertices entered by the
+                            user.
+                            The program caters for the user to enter points using the mouse
+                            or a random generator. Three functions can be performed on data: (a) Convex Hull (b) Hull
+                            Peel (c) Peels
+                            on point clusters.</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/chess.PNG" alt="img">
+                        <video width="780" height="400" controls>
+                            <source src="./videos/hull_demo.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
                 <div class="project-item">
                     <div class="project-info">
-                        <h1>Computer Graphics</h1>
                         <a href="https://github.com/karina-b?tab=repositories">
-                            <u><h2>Triangulation</h2></u>
+                            <div class="tooltip">
+                                <h2>Triangulation</h2>
+                                <span class="tooltiptext">Click here to read more on GitHub</span>
+                            </div>
+
                         </a>
-                        <p>Developed the trisection/cleanup triangulation algorithm with colour-codes triangles using C++ and OpenGL.</p>
+                        <p>Developed the trisection/cleanup triangulation algorithm with colour-codes triangles using
+                            C++ and OpenGL/Glut.</p>
                     </div>
                     <div class="project-img">
-                        <img src="./img/tri.PNG" alt="img">
+                        <video width="780" height="400" controls>
+                            <source src="./videos/triangulation2_demo.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/karina-b?tab=repositories">
+                            <div class="tooltip">
+                                <h2>Image Filtering</h2>
+                                <span class="tooltiptext">Click here to read more on GitHub</span>
+                            </div>
+
+                        </a>
+                        <p>Built an image filtering program in C++ utilizing OpenGL/Glut, allowing users to apply
+                            multiple filtering effects and save the resulting photos.
+                        </p>
+                    </div>
+                    <div class="project-img">
+                        <video width="780" height="400" controls>
+                            <source src="./videos/imagefilter_demo.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <a href="https://github.com/karina-b?tab=repositories">
+                            <div class="tooltip">
+                                <h2>Chess</h2>
+                                <span class="tooltiptext">Click here to read more on GitHub</span>
+                            </div>
+                            <p>Developed a Chess program with a human-computer interface (Minimax with alpha-beta
+                                pruning)
+                                using Python, in order to play chess games against the computer.
+                            </p>
+                        </a>
+
+                    </div>
+                    <div class="project-img">
+                        <video width="780" height="400" controls>
+                            <source src="./videos/chess_demo.mp4" type="video/mp4">
+                        </video>
                     </div>
                 </div>
             </div>
@@ -121,10 +193,10 @@
                 </div>
             </div>
             <div class="col-right">
-                <h1 class="section-title">About <span>me</span></h1>
+                <h1 class="section-title">About me</h1>
                 <h2>Computer Scientist</h2>
-                <p>I am a fourth year Computer Science student with an interest in web and mobile app development.</p>
-                <p>In my free time, I love cooking and playing Pokemon Go!</p>
+                <p>I am a fourth year Computer Science student with an interest in web and mobile app development.
+                </p>
                 <!--<a href="#" class="cta">My Resume</a> -->
             </div>
         </div>
@@ -135,7 +207,7 @@
     <section id="contact">
         <div class="contact container">
             <div>
-                <h1 class="section-title">Contact <span>info</span></h1>
+                <h1 class="section-title">Contact Information</h1>
             </div>
             <div class="contact-items">
                 <div class="contact-item">
